--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-	"name": "fcc-api-projects-boilerplate",
-	"version": "0.0.1",
-	"description": "An FCC Backend Challenge",
+	"name": "simple-portfolio-app",
+	"version": "0.2.0",
+	"description": "This node app brings all fcc APIs and microservice projects in one place",
 	"main": "server.js",
 	"scripts": {
 		"start": "node server.js"
 	},
 	"dependencies": {
 		"express": "^4.12.4",
-		"cors": "^2.8.0"
+		"cors": "^2.8.0",
+		"dotenv": "^8.2.0"
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://githost.com/camper/repo.git"
+		"url": "https://github.com/abdelghanyMh/A-simple-Portfolio-App"
 	},
 	"keywords": [
 		"node",
