--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
 	"name": "simple-portfolio-app",
-	"version": "0.2.0",
+	"version": "0.3.0",
 	"description": "This node app brings all fcc APIs and microservice projects in one place",
 	"main": "server.js",
 	"scripts": {
 		"start": "node server.js"
 	},
 	"dependencies": {
-		"express": "^4.12.4",
-		"cors": "^2.8.0",
-		"dotenv": "^8.2.0"
+		"body-parser": "^1.19.0",
+		"cors": "^2.8.5",
+		"dotenv": "^8.2.0",
+		"express": "^4.17.1",
+		"mongodb": "^3.6.10",
+		"mongoose": "^5.13.2",
+		"url-exists": "^1.0.3"
 	},
 	"repository": {
 		"type": "git",
