--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
 		"express": "^4.17.1",
 		"mongodb": "^3.6.10",
 		"mongoose": "^5.13.2",
-		"url-exists": "^1.0.3"
+		"url-exists": "^1.0.3",
+		"moment": "^2.29.1"
 	},
 	"repository": {
 		"type": "git",
