--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 		"mongodb": "^3.6.10",
 		"mongoose": "^5.13.2",
 		"url-exists": "^1.0.3",
-		"moment": "^2.29.1"
+		"moment": "^2.29.1",
+		"multer": "^1.4.2"
 	},
 	"repository": {
 		"type": "git",
